# github-release-notifier

./: .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.rst  entrypoint.sh  manifest.yml  mycron.sh  setup.cfg  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: main.yml
github_release_notifier/: __init__.py  cli.py  notifier.py  parser.py  webhook.py
