[metadata]
name = github_release_notifier
version = attr: github_release_notifier.__version__
description = Get notified when a specific package got a new release on Github
long_description = file: README.rst
author = Jay MOULIN
author_email = jaymoulin+github-release-notifier@gmail.com
url = https://github.com/femtopixel/github-release-notifier/
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Communications
    Topic :: Internet
    Topic :: Software Development :: Pre-processors
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools

[options]
include_package_data = True
packages = find:
install_requires =
    feedparser
    requests
python_requires = >=3

[options.entry_points]
console_scripts =
    github-release-notifier = github_release_notifier.cli:main
